Feature: Infrastructure Services Implementation
- Create controller for registering new students
- Add Student Doctrine custom types and xml mapping
